# confidence-ensembles

./: LICENSE.txt  README.md  setup.cfg  setup.py
benchmark/: 20250210_Benchmark_Results_Plots.xlsx  README  README.md  conda_env_freeze.txt
confens/: __init__.py
confens/classifiers/: Classifier.py  ConfidenceBagging.py  ConfidenceBaggingParallel.py  ConfidenceBoosting.py  ConfidenceBoosting_old.py  ConfidenceEnsemble.py  __init__.py
confens/examples/: rq3.py
confens/metrics/: EnsembleMetric.py  __init__.py
confens/tests/: example_unsupervised.py  pyod_compatibility.py  rq1-2.py  sklearn_compatibility.py
confens/utils/: classifier_utils.py  general_utils.py
debug/: example_supervised.py  example_unsupervised.py  test_algs.py  test_algs_unknowns.py  test_base_ensembles.py  test_baselearners.py  test_ensembles.py  test_ensembles_2.py  test_simple.py
debug/sample_data/: README_data.txt
pyod-benchmark/: benchmark.py  benchmark_confens.py
src/: __init__.py
src/classifiers/: Classifier.py  ConfidenceBagging.py  ConfidenceBaggingParallel.py  ConfidenceBoosting.py
src/metrics/: EnsembleMetric.py
tests/: example_supervised.py  example_unsupervised.py  rq1-2.py  rq3.py
