[metadata]
name = confidence-ensembles
version = 0.0.1
author = tommyippoz
author_email = tommaso.zoppi@unifi.it
description = Confidence Ensembles to improve Classification
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/tommyippoz/confidence-ensembles
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src